# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
#

2005-07-20 16:14:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-101

    Summary:
      types, now "URI.to_unicode" escapes the ampersand character
    Revision:
      itools--main--0.9--patch-101


    modified files:
     Changelog types/__init__.py


2005-07-19 11:06:44 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-100

    Summary:
      html, finish list of boolean attributes
    Revision:
      itools--main--0.9--patch-100


    modified files:
     Changelog html/parser.py


2005-07-16 18:05:14 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-99

    Summary:
      xhtml, fix "translate", keep the document header
    Revision:
      itools--main--0.9--patch-99


    modified files:
     Changelog xhtml/XHTML.py


2005-07-16 17:59:27 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-98

    Summary:
      xhtml, fix "translate" for empy elements
    Revision:
      itools--main--0.9--patch-98


    modified files:
     Changelog xhtml/XHTML.py xml/XML.py


2005-07-16 15:31:01 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-97

    Summary:
      merge STL improvement from the 0.8 branch
    Revision:
      itools--main--0.9--patch-97

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-99
       xml, now the character ":" is allowed in STL expressions
    

    modified files:
     Changelog xml/STL.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.8--patch-99


2005-07-16 15:26:51 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-96

    Summary:
      html, add 'selected' to the list of boolean attributes
    Revision:
      itools--main--0.9--patch-96

    The list must be finished!

    modified files:
     Changelog html/parser.py


2005-07-14 19:59:32 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-95

    Summary:
      catalog, fix un-indexing
    Revision: