@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-07-22 12:17:35 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-102
+
+    Summary:
+      handlers, implement "has_handler" for files
+    Revision:
+      itools--main--0.9--patch-102
+
+
+    modified files:
+     Changelog handlers/Folder.py handlers/Handler.py
+
+
 2005-07-20 16:14:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-101
 
     Summary:
